styles/style.css
/*
 Navbar
*/
section {
  scroll-margin-top: 60px;
  /*Global fix for sections scroll*/
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: Arial, sans-serif;
  overflow-x: hidden;
  padding-top: 70px;
}

.navbar {
  height: 70px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 40px;
  background: linear-gradient(90deg, #0700b8 0%, #00ff88 100%);
  color: white;
  border-bottom: 1px solid rgba(0, 255, 136, 0.25);
  box-shadow: 0 2px 10px rgba(0, 255, 136, 0.15);
  position: fixed;
  top: 0;
  z-index: 1000;
  left: 0;
  width: 100%;
}

.logo {
  font-size: 24px;
  font-weight: bold;
  cursor: pointer;
}

.store-logo {
  width: 12em;
  height: 12em;
  object-fit: contain;
}

.nav-links {
  display: flex;
  list-style: none;
  gap: 30px;
  align-items: center;
  font-family: arial;
  font-weight: 700;
}

.nav-links a {
  text-decoration: none;
  color: white;
  font-size: 20px;
  transition: 0.3s;
  font-family: syne;
}

.nav-links a:hover {
  color: #ffffff;
  text-shadow: 15px 10px 15px rgba(0, 0, 0, 0.25);
}


.cart {
  display: flex;
  align-items: center;
  gap: 8px;
}


.cart-count {
  background-color: #4da6ff;
  color: white;
  font-size: 12px;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: 300;
  font-family: arial;
}


#menu-toggle {
  display: none;
}


.hamburger {
  display: none;
  font-size: 30px;
  cursor: pointer;
}


/* 
 Mobile
*/

@media (max-width: 768px) {

  .navbar {
    padding: 0 20px;
  }

  .hamburger {
    display: block;
  }


  .nav-links {
    position: absolute;
    top: 70px;
    left: 0;
    width: 100%;
    background-color: #111;
    font-family: arial;
    font-weight: 700;
    background: linear-gradient(90deg, #0700b8 0%, #00ff88 100%);
    border-top: 1px solid white;
    border-bottom: 1px solid white;
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
    z-index: 100;

    flex-direction: column;
    gap: 20px;
    padding: 30px 0;

    display: none;
  }


  #menu-toggle:checked~.nav-links {
    display: flex;
  }

}

/*
 Hero section
*/

.hero {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 80px 10%;
  min-height: 100vh;
  background-color: rgb(32, 32, 163);
  color: rgb(255, 255, 255);
  overflow-x: hidden;
}

.hero-title {
  font-weight: bold;
  font-family: syne;
}


.hero-content {
  max-width: 500px;
}

.hero h1 {
  font-size: 52px;
  margin-bottom: 20px;
}

.hero p {
  font-size: 18px;
  color: #cbd5e1;
  margin-bottom: 30px;
}

.hero-buttons {
  display: flex;
  gap: 15px;
}

.btn {
  padding: 12px 20px;
  border-radius: 8px;
  text-decoration: none;
  font-weight: bold;
}

.primary {
  background-color: #00cccc;
  font-family: syne;
  color: white;
  transition: color 0.35s,
    background-color 0.35s,
    font-weight 0.35s,
    opacity 0.15s;
}

.primary:hover {
  color: #00cccc;
  background-color: white;
}

.primary:active {
  opacity: 0.6;
}

.secondary {
  border: 2px solid white;
  color: white;
  font-family: syne;
  transition: color 0.35s,
    background-color 0.35s,
    opacity 0.15s;
}

.secondary:hover {
  color: rgb(32, 32, 163);
  background-color: white;
}

.secondary:active {
  opacity: 0.6;
}

.hero-image img {
  width: 600px;
  max-width: 100%;
}

/* responsive */
@media (max-width: 768px) {
  .hero {
    flex-direction: column;
    text-align: center;
    min-height: auto;
    padding: 40px 20px 20px;
  }

  .hero h1 {
    font-size: 36px;
  }

  .hero-buttons {
    justify-content: center;
  }

  .hero-image {
    width: 250px;
    margin-top: 20px;
  }
}

/*
 Why choose us section
*/
.why-choose-us {
  padding: 80px 10%;
  background: #f8f9fb;
}

.section-title {
  text-align: center;
  font-size: 2.2rem;
  margin-bottom: 50px;
}

.features-grid {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 25px;
}

.feature-card {
  background: #fff;
  padding: 35px 25px;
  border: 2px solid transparent;
  border-radius: 14px;
  text-align: center;
  cursor: pointer;
  transition:
    transform 0.35s ease,
    box-shadow 0.35s ease,
    background 0.35s ease;
}

.feature-img {
  width: 6rem;
}

.feature-card:hover {
  transform: translateY(-6px);

  background:
    linear-gradient(white, white) padding-box,
    linear-gradient(90deg, #0700b8 0%, #00ff88 100%) border-box;

  box-shadow: 0 15px 35px rgba(7, 0, 184, 0.18);
}

.feature-icon {
  font-size: 3rem;
  margin-bottom: 20px;
}

.feature-card h3 {
  margin-bottom: 12px;
  font-size: 1.3rem;
}

.feature-card p {
  color: #666;
  line-height: 1.6;
}

@media (max-width: 900px) {
  .features-grid {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (max-width: 600px) {
  .features-grid {
    grid-template-columns: 1fr;
  }

  .why-choose-us {
    padding: 60px 6%;
  }
}

/*
 Footer
*/
.footer {
  background: #111;
  color: white;
  padding: 60px 8% 0;
}


.footer-container {
  max-width: 1200px;
  margin: auto;

  display: grid;
  grid-template-columns: 1.5fr 1fr 1fr;
  align-items: center;

  gap: 50px;

  padding-bottom: 50px;
}



/* Logo */

.footer-brand img {
  width: 25rem;
  height: auto;
}



/* Titles */

.footer h3 {
  font-size: 1.1rem;
  margin-bottom: 20px;
  color: white;
}



/* Links */

.footer ul {
  list-style: none;
  padding: 0;
}


.footer li {
  margin-bottom: 12px;
}


.footer a {
  color: #aaa;
  text-decoration: none;

  transition: .3s ease;
}


.footer a:hover {
  color: whitesmoke;
}



/* Contact */

.footer-contact p {
  color: #aaa;
  margin-bottom: 12px;
}

.contact-image {
  object-fit: contain;
  width: 21px;
}

/* Bottom */

.footer-bottom {
  border-top: 1px solid #2b2b2b;
  text-align: center;
  padding: 20px 0;
}


.footer-bottom p {
  color: #777;
  font-size: .9rem;
}



/* Responsive */

@media(max-width: 800px) {

  .footer-container {
    grid-template-columns: 1fr;
    text-align: center;
    gap: 35px;
  }


  .footer-brand img {
    margin: auto;
  }

}

